--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'drop' 
     publishLocation: 'FilePath' # Options: container, filePath
-    targetPath: '' # Required when publishLocation == FilePath
+    targetPath: '$(System.DefaultWorkingDirectory)/bin/WebApp' # Required when publishLocation == FilePath
     #parallel: false # Optional
     #parallelCount: # Optional
     #fileCopyOptions: #Optional
