--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,11 +34,11 @@ steps:
     configuration: '$(buildConfiguration)'
 
 - task: PublishBuildArtifacts@1
-  inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
-    artifactName: 'drop' 
-    publishLocation: 'FilePath' # Options: container, filePath
-    targetPath: '$(System.DefaultWorkingDirectory)/bin/WebApp' # Required when publishLocation == FilePath
-    #parallel: false # Optional
-    #parallelCount: # Optional
-    #fileCopyOptions: #Optional
+  # inputs:
+  #   pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+  #   artifactName: 'drop' 
+  #   publishLocation: 'FilePath' # Options: container, filePath
+  #   targetPath: '$(System.DefaultWorkingDirectory)/bin/WebApp' # Required when publishLocation == FilePath
+  #   #parallel: false # Optional
+  #   #parallelCount: # Optional
+  #   #fileCopyOptions: #Optional
