Added Singleton class DatabaseConnector that connects to project's database using connection string, added PetaPoco package to perform database operations.

--- a/zpi_aspnet_test/zpi_aspnet_test/Web.config
+++ b/zpi_aspnet_test/zpi_aspnet_test/Web.config
@@ -18,6 +18,12 @@
         <httpRuntime targetFramework="4.7.2" />
       </system.Web>
   -->
+  <connectionStrings>
+     <add name="zoomers_sql_server"
+          connectionString="Data Source=zoomers.database.windows.net;Initial Catalog=zpi;Persist Security Info=True;User ID=db_sa;Password=Zoomers69"
+          providerName="System.Data.SqlClient"
+     />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.5.2"/>
