Repaired Controller tests

--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/App.config
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/App.config
@@ -9,7 +9,10 @@
     </appSettings>
 
     <connectionStrings>
-
+	    <add name="zoomers_sql_server"
+	         connectionString="Data Source=zoomers.database.windows.net;Initial Catalog=zpi;Persist Security Info=True;User ID=db_sa;Password=Zoomers69"
+	         providerName="System.Data.SqlClient"
+	    />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup>
   <runtime>
