Refactorized test case added DoesNotThrowMatcher for handling exceptions, added second assertion to check equality of prices.

--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
@@ -100,7 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlgorithmTests.cs" />
+    <Compile Include="DoesNotThrow.cs" />
     <Compile Include="Feature_Parser.Tests\ParserTestsScenario.cs" />
+    <Compile Include="DoesNotThrowMatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
