Added the last test case for algorithm.

--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
@@ -100,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlgorithmTests.cs" />
+    <Compile Include="Builders\IBuilder.cs" />
+    <Compile Include="Builders\ProductBuilder.cs" />
+    <Compile Include="Builders\StateBuilder.cs" />
     <Compile Include="DoesNotThrow.cs" />
     <Compile Include="Feature_Parser.Tests\ParserTestsScenario.cs" />
     <Compile Include="DoesNotThrowMatcher.cs" />
