--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/App.config
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/App.config
@@ -9,10 +9,7 @@
     </appSettings>
 
     <connectionStrings>
-	    <add name="zoomers_sql_server"
-	         connectionString="Data Source=zoomers.database.windows.net;Initial Catalog=zpi;Persist Security Info=True;User ID=db_sa;Password=Zoomers69"
-	         providerName="System.Data.SqlClient"
-	    />
+	    <add name="zoomers_sql_server" connectionString="Data Source=zoomers.database.windows.net;Initial Catalog=zpi;Persist Security Info=True;User ID=db_sa;Password=Zoomers69" providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup>
   <runtime>
@@ -28,6 +25,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.4.0" newVersion="3.1.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
