--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
@@ -125,6 +125,9 @@
       <Name>zpi_aspnet_test_xpath_parser</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DatabaseInterfacesTests\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
