Update azure-pipelines.yml for Azure Pipelines, add test coverage report

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,12 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: 'JaCoCo' 
+    # other options: cobertura, jaCoCo
+    summaryFileLocation: coverage.xml
+
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
