--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ steps:
 
 - task: PublishCodeCoverageResults@1
   inputs:
-    codeCoverageTool: 'JaCoCo' 
+    codeCoverageTool: 'cobertura' 
     # other options: cobertura, jaCoCo
     summaryFileLocation: '$(Agent.TempDirectory)/TestResults/**/*.coverage'
     #example path d:\a\_temp\TestResults\f4c836ac-65a6-43a9-bbd2-d7bb7a7db7a9\VssAdministrator_WIN-IS9DU3TS40F 2020-06-19 22_20_51.coverage
