Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,7 @@ steps:
   inputs:
     codeCoverageTool: 'cobertura' 
     summaryFileLocation: '$(Agent.TempDirectory)/TestResults/**/*.coverage'
+    reportDirectory: '$(Agent.TempDirectory)/cchtml/'
 
 - task: PublishBuildArtifacts@1
   inputs:
