--- a/zpi_aspnet_test/zpi_aspnet_test/zpi_aspnet_test.csproj
+++ b/zpi_aspnet_test/zpi_aspnet_test/zpi_aspnet_test.csproj
@@ -159,6 +159,7 @@
     <Compile Include="DataBaseUtilities\Interfaces\IStateDatabaseAccess.cs" />
     <Compile Include="DataBaseUtilities\Interfaces\ITaxDatabaseAccess.cs" />
     <Compile Include="DataBaseUtilities\DAOs\StandardTaxDatabaseAccessor.cs" />
+    <Compile Include="DataBaseUtilities\StateTaxRelator.cs" />
     <Compile Include="Enumerators\ProductCategoryEnum.cs" />
     <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="Global.asax.cs">
