Added base of unit tests of DAO dependencies injected into controllers.

--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/App.config
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/App.config
@@ -10,9 +10,7 @@
 	</appSettings>
 
 	<connectionStrings>
-		<add name="zoomers_sql_server"
-		     connectionString="Data Source=zoomers.database.windows.net;Initial Catalog=zpi;Persist Security Info=True; MultipleActiveResultSets=true; User ID=db_sa; Password=Zoomers69"
-		     providerName="System.Data.SqlClient" />
+		<add name="zoomers_sql_server" connectionString="Data Source=zoomers.database.windows.net;Initial Catalog=zpi;Persist Security Info=True; MultipleActiveResultSets=true; User ID=db_sa; Password=Zoomers69" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -33,11 +31,10 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+				<bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60"
-				                  culture="neutral" />
+				<assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-3.1.4.0" newVersion="3.1.4.0" />
 			</dependentAssembly>
 		</assemblyBinding>
