--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/packages.config
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/packages.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
-  <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
+  <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NHamcrest" version="2.0.1" targetFramework="net472" />
   <package id="NHamcrest.XUnit" version="2.0.1" targetFramework="net472" />
+  <package id="NSubstitute" version="4.2.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="xunit.assert" version="2.2.0" targetFramework="net472" />
 </packages>
