--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
@@ -113,9 +113,10 @@
     <Compile Include="Builders\ProductBuilder.cs" />
     <Compile Include="Builders\StateBuilder.cs" />
     <Compile Include="Builders\TaxBuilder.cs" />
-    <Compile Include="DoesNotThrow.cs" />
+    <Compile Include="Matchers\DecoratorMatchers.cs" />
+    <Compile Include="Matchers\DoesNotThrow.cs" />
     <Compile Include="Feature_Parser.Tests\ParserTestsScenario.cs" />
-    <Compile Include="DoesNotThrowMatcher.cs" />
+    <Compile Include="Matchers\DoesNotThrowMatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
