--- a/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
+++ b/zpi_aspnet_test/zpi_aspnet_test.Tests/zpi_aspnet_test.Tests.csproj
@@ -113,6 +113,9 @@
     <Compile Include="Builders\ProductBuilder.cs" />
     <Compile Include="Builders\StateBuilder.cs" />
     <Compile Include="Builders\TaxBuilder.cs" />
+    <Compile Include="Constants\DoubleConstants.cs" />
+    <Compile Include="Constants\IntConstants.cs" />
+    <Compile Include="Constants\StringConstants.cs" />
     <Compile Include="Controllers\CategorySelectionControllerTests.cs" />
     <Compile Include="Controllers\ProductSelectionControllerTests.cs" />
     <Compile Include="Controllers\StateSelectionControllerTests.cs" />
